--- a/Aplikácia/style/main.css
+++ b/Aplikácia/style/main.css
@@ -1,56 +1,135 @@
 @import "font-awesome/css/font-awesome.min.css";
 
-html { cursor: default; background-color: #323232; }
-body { margin: 0px; min-width: 500px; background-color: #FFF; font-family: 'Ubuntu', sans-serif; }
 
+/* MAIN */
+html { cursor: default; background-color: #323232; }
+body { margin: 0px; min-width: 740px; background-color: #FFF; font-family: 'Ubuntu', sans-serif;
+      -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
+*[onclick] { cursor: pointer; }
 a { color: inherit; text-decoration: none; }
 a:hover { text-decoration: none; }
 a:focus { background-color: none !important; }
-
 .spacer { clear: both; }
 .loader { text-align: center; font-size: 25px; margin: 40px 0px; }
-.content { max-width: 1200px; margin: 0px auto; }
-
+.content { max-width: 1200px; margin: 0px auto; padding: 20px 10px; }
 .admin_icon { cursor: pointer; }
 
-header { overflow: hidden; background-image: url("../image/header.jpg"); background-color: #191919; height: 200px; background-position: center; background-repeat: no-repeat; }
+.title_1 { margin-bottom: 20px; background-color: #B3231B; color: #FFF; padding: 15px 20px; text-transform: uppercase; font-size: 18px; font-weight: bold; }
+.title_1 > .subtitle { font-size: 13px; margin-top: 10px; }
+
+.active_1 { text-decoration: underline; }
+.active_1:hover { text-decoration: underline; }
+
+.buttons { text-align: right; }
+.button_submit { display: inline-block; background-color: #B3231B; margin-bottom: 20px; color: white; font-weight: bold; padding: 5px 15px; font-size: 15px; border-radius: 5px; box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.3); }
+.button_submit#empty_add { display: inline-block; background-color: #666; }
+.button_submit.add_absence { margin-top: 20px; }
+.hidden { display: none; }
+
+.input_title { font-size: 22px; margin: 10px 0px; font-weight: bold; color: #323232; }
+
+.input_value { background-color: #EEE; border-radius: 5px; box-shadow: inset 0px 0px 5px 1px rgba(0,0,0,0.5); padding: 3px 10px; float: left; }
+.input_value span { display: inline-block; margin: 5px; border-radius: 3px; box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.3); color: white; background-color: #323232; padding: 3px 10px; font-weight: bold; transition-duration: 0.5s; }
+.input_value input { display: none; }
+.input_value input:checked ~ span { background-color: #B3231B; }
+
+.input_text { background-color: #FEFEFE; border-radius: 5px; box-shadow: inset 0px 0px 5px 1px rgba(0,0,0,0.5); padding: 5px 10px; border: none; font-size: 16px; }
+.input_text[name="c_description"] { width: 90%; max-width: 800px; }
+.input_text[name="c_from_h"], .input_text[name="c_from_m"], .input_text[name="c_to_h"], .input_text[name="c_to_m"] { width: 40px; text-align: center; }
+
+.input_subtype { max-height: 0px; overflow: hidden; transition-duration: 0.5s; }
+.input_time { max-height: 0px; overflow: hidden; transition-duration: 0.5s; margin-top: 10px; }
+.input_time > div { margin: 5px 0px; }
+
+.input_help { color: #555; font-size: 15px; font-style: italic; }
+
+
+/* MESSAGES */
+.message { border-radius: 3px; font-size: 16px; padding: 20px 30px ; margin-bottom: 20px; color: rgba(0,0,0,0.8); overflow: hidden; position: relative; }
+.message .fa { font-size: 40px; margin-right: 30px; display: inline-block; float: left; }
+.message.error { background-color: #FFECEC; box-shadow: 0px 0px 3px 1px #E85C58; }
+.message.error .fa { color: #E33630; }
+.message.info { background-color: #E3F7FC; box-shadow: 0px 0px 3px 1px #B6E6F9; }
+.message.info .fa { color: #0473DD; }
+.message.ok { background-color: #E9FFD9; box-shadow: 0px 0px 3px 1px #C5E0B1; }
+.message.ok .fa { color: #11B922; }
+
+
+/* HEADER */
+header .content { padding: 0px 10px; }
+header { position: relative; overflow: hidden; background-image: url("../image/header.jpg"); background-color: #191919; background-position: center; background-repeat: no-repeat; }
 header > .content { height: 200px; position: relative; }
+header > .top { background-color: rgba(0,0,0,0.5); color: #FFF; padding: 8px 10px; }
 header > div > a { margin: 19px; float: left; }
 header h1 { padding: 17px 0px 0px 0px; margin: 0px; font-size: 25px; color: #FFF; text-transform: uppercase; text-shadow: 1px 1px 3px rgba(0,0,0,0.8); }
 header h2 { padding: 5px 0px 0px 0px; margin: 0px; font-size: 18px; color: #FFF; text-transform: uppercase; text-shadow: 1px 1px 3px rgba(0,0,0,0.8); font-weight: normal; }
 
-header .login_form { position: absolute; bottom: 10px; right: 10px; }
-header .login_form > input, header .login_form > label { border-radius: 3px; margin: 0px; border: none; box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5); font-size: 12px; line-height: 26px; }
-header .login_form > input { padding: 0px 6px; }
-header .login_form > label { background-color: #B3231B; color: #FFF; padding: 0px 10px; cursor: pointer; }
+header .login_form { text-align: right; font-size: 13px; }
+header .login_form > input, header .login_form > label { border-radius: 3px; border: none; font-size: 12px; }
+header .login_form > input { margin: 0px 10px; padding: 3px 6px; }
+header .login_form > label { background-color: #B3231B; color: #FFF; padding: 6px 10px; cursor: pointer; }
 header .login_form > label:hover { background-color: #535250; }
 header .login_form > #login_submit { display: none; }
 
-header .logged_panel { font-size: 0px; position: absolute; bottom: 10px; right: 10px; color: #000; background-color: rgba(255,255,255,0.8); border-radius: 5px; padding: 5px 0px; box-shadow: inset 0px 0px 2px 1px rgba(0,0,0,0.8);  }
-header .logged_panel > .name { font-weight: bold; padding: 0px 15px; border-right: 1px solid #000; font-size: 14px; }
+header .logged_panel { font-weight: bold; text-align: right;  }
+header .logged_panel > * { border-right: 1px solid #FFF; }
+header .logged_panel > *:last-child { border-right: none; }
+header .logged_panel .fa { font-size: 16px; vertical-align: middle; }
+header .logged_panel > span { font-size: 14px; padding: 0px 15px; }
+header .logged_panel > span .fa { margin-right: 10px; }
+header .logged_panel > .name { padding: 0px 15px; font-size: 14px; }
 header .logged_panel > .name > span { color: #B3231B; padding-left: 5px; }
-header .logged_panel > a > span { font-size: 16px; padding: 0px 15px; }
-header .logged_panel > a:first-of-type > span { border-right: 1px solid #000; }
+header .logged_panel > a { font-size: 16px; }
+header .logged_panel > a > span { padding: 0px 15px; }
 
-footer { background-color: #323232; font-size: 12px; color: #FFF; padding: 15px 10px; }
-footer .copyright { float: left; }
-footer .about { color: #FFBD43; float: right; cursor: pointer; }
-
-nav { background-color: #535250; }
-nav ul { padding: 5px 3px; margin: 0px; font-weight: bold; text-transform: uppercase; font-size: 12px; }
+nav { background-color: rgba(0,0,0,0.4); width: 100%; }
+nav ul { padding: 5px 3px; max-width: 1200px; margin: 0px auto; font-weight: bold; text-transform: uppercase; font-size: 12px; }
 nav ul > li { border-right: 1px solid #CCC; border-left: 1px solid #CCC; color: #FFF; list-style: none; list-style-type: none; float: left; padding: 2px 15px; }
 nav ul > li:first-of-type { border-left: none; }
 nav ul > li:last-of-type { border-right: none; }
 nav ul > li:hover { text-decoration: underline; cursor: pointer; }
 
-.overview { padding: 20px; }
 
-.users_table { width: 300px; float: left; box-shadow: inset 0px 0px 0px 2px rgb(216, 216, 216); }
-.users_table > .title { background-color: #B3231B; color: #FFF; font-size: 16px; font-weight: bold; text-transform: uppercase; padding: 15px 20px; }
-.users_table > .person { padding: 8px 15px; margin: 0px 10px; border-bottom: 1px solid rgb(216, 216, 216); font-size: 12px; color: #444; cursor: pointer; }
-.users_table > .person > span { color: #999; }
-.users_table > .person:last-of-type { border-bottom: none; margin-bottom: 2px; }
-.users_table > .person:hover { background-color: #EEE; }
+/* FOOTER */
+footer { background-color: #323232; font-size: 12px; color: #FFF; padding: 15px 10px; }
+footer .copyright { float: left; }
+footer .about { color: #FFBD43; float: right; cursor: pointer; }
+
+
+/* SIDE TABLE */
+.side_table { width: 300px; float: left; box-shadow: inset 0px 0px 0px 2px rgb(216, 216, 216); }
+.side_table > .title { background-color: #B3231B; color: #FFF; font-size: 16px; font-weight: bold; text-transform: uppercase; padding: 15px 15px; }
+.side_table > .value { padding: 8px 15px; margin: 0px 10px; border-bottom: 1px solid rgb(216, 216, 216); font-size: 12px; color: #444; cursor: pointer; }
+.side_table > .value > span { color: #999; }
+.side_table > .value:last-of-type { border-bottom: none; margin-bottom: 2px; }
+.side_table > .value:hover { background-color: #EEE; }
+.side_table .empty { font-size: 13px; color: #888; padding: 10px 15px; }
+
+
+/* FORMS */
+.form { padding: 0px 20px; }
+.form > div { margin: 10px; }
+.form > div > span { display: block; font-size: 12px; color: #666; margin-left: -10px; }
+.form > .name { margin: 0px; background-color: #B3231B; color: #FFF; padding: 15px 20px; text-transform: uppercase; font-size: 16px; font-weight: bold; }
+
+.form > div > input[type='text'] ,
+.form > div > input[type='password'] { border-radius: 5px; padding: 4px 8px; margin: 3px 0px; border: none;
+  box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.3); font-size: 15px; color: #333; width: 300px; }
+
+.form > div > input[type='text']:focus,
+.form > div > input[type='password']:focus { box-shadow: 0px 0px 3px 1px #B3231B; }
+
+.form > div > input[type='button'] { background-color: #B3231B; color: #FFF; border: none; border-radius: 5px; padding: 4px 8px;
+  box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.3); margin-left: 10px; }
+
+.form > div > input[type='button']:hover { background-color: #535250; cursor: pointer; }
+.form .status { font-size: 14px; color: #666; }
+.form .info { font-size: 12px; margin: 5px 0px; font-weight: bold; color: #444; }
+.form .info .fa { margin-right: 5px; }
+
+
+/* OVERVIEW */
+#overview { padding-bottom: 20px; }
 
 #overview_table { margin-left: 320px; overflow: hidden; }
 
@@ -66,26 +145,86 @@ nav ul > li:hover { text-decoration: underline; cursor: pointer; }
 #overview_table > .box { box-shadow: inset 0px 0px 0px 2px rgb(216, 216, 216); margin: 15px 0px; padding: 0px 10px; font-size: 14px; color: #555; }
 #overview_table > .box > .title { background-color: #535250; color: #FFF; margin: 0px -10px; padding: 10px 15px; text-transform: uppercase; font-size: 16px; font-weight: bold; }
 #overview_table > .box > .holiday { background-color: #B3231B; }
-#overview_table > .box > table { width: 100%; white-space: nowrap; border-spacing: 0px;  }
-#overview_table > .box > table .value { border-bottom: 1px solid rgb(216, 216, 216); }
-#overview_table > .box > table .value > td { padding-top: 8px; }
-#overview_table > .box > table .value > .name { font-weight: bold; width: 99%; padding: 8px 10px 0px 10px; }
+
+#overview_table > .box > table { width: 100%; border-spacing: 0px; }
+#overview_table > .box > table .value > td { padding-top: 0px; padding: 8px 10px 0px 10px; }
+#overview_table > .box > table .value > .name { font-weight: bold; width: 99%; }
 #overview_table > .box > table .value > .name > strong { color: #B3231B; }
 #overview_table > .box > table .value > .name > span { font-size: 13px; color: #B3231B; margin: 0px 5px 0px -5px; width: 15px; }
-#overview_table > .box > table .value > .time { font-weight: bold; padding: 8px 10px; border-bottom: 1px solid rgb(216, 216, 216); }
+#overview_table > .box > table .value > .time { font-weight: bold; white-space: nowrap; }
 #overview_table > .box > table .value > .time > strong { color: #B3231B;  }
-#overview_table > .box > table .value > .type { border-bottom: 1px solid rgb(216, 216, 216); padding: 8px 0px; }
-#overview_table > .box > table .desc > td { color: #777; padding: 0px 15px 8px 15px; font-size: 13px; border-bottom: 1px solid rgb(216, 216, 216); }
-#overview_table > .box > table .desc:last-of-type > td { border-bottom: none; }
-#overview_table > .box > table .value:last-of-type > .time, .time { border-bottom: none; }
+#overview_table > .box > table .value > .type { white-space: nowrap; }
 
-.profile { padding: 20px 0px; }
-.profile > div { margin: 10px; }
-.profile > div > span { display: block; font-size: 12px; color: #666; margin-left: -10px; }
-.profile > .name { margin: 0px; background-color: #B3231B; color: #FFF; padding: 15px 20px; text-transform: uppercase; font-size: 16px; font-weight: bold; }
-.profile > div > input[type='text'], .profile > div > input[type='password'] { border-radius: 5px; padding: 4px 8px; margin: 3px 0px; border: none;
-  box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.3); font-size: 15px; color: #333; width: 300px; }
-.profile > div > input[type='text']:focus, .profile > div > input[type='password']:focus { box-shadow: 0px 0px 3px 1px #B3231B; }
-.profile > div > input[type='button'] { background-color: #B3231B; color: #FFF; border: none; border-radius: 5px; padding: 4px 8px;
-  box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.3); margin-left: 10px; }
-.profile > div > input[type='button']:hover { background-color: #535250; cursor: pointer; }
+#overview_table > .box > table .subtype > td { padding: 0px 10px; font-style: italic; font-size: 12px; }
+
+#overview_table > .box > table .desc > td { color: #777; padding: 0px 10px 8px 10px; font-size: 13px; border-bottom: 1px solid rgb(216, 216, 216); }
+#overview_table > .box > table .desc:last-of-type > td { border-bottom: none; }
+
+
+/* CALENDAR */
+#calendar .side_table { margin-top: 15px; }
+#calendar_table { margin: 20px 0px; width: 100%; table-layout: fixed; text-align: center; font-weight: bold; font-size: 15px; }
+
+#calendar_table tr:first-child { color: #FFF; }
+#calendar_table tr:nth-child(2) { color: #AAA; }
+#calendar_table th, #calendar_table td { padding: 10px 0px; }
+#calendar_table th { background-color: #323232; }
+#calendar_table td.empty { background-color: #F5F5F5; }
+#calendar_table td.week { background-color: #DDD; }
+#calendar_table td.weekend { background-color: #AAA; }
+#calendar_table td.absence { background-color: #B3231B; color: white; }
+#calendar_table td.holiday { background-color: #FFBD43; }
+
+
+/* USERS */
+#users .title_1 .subtitle a { margin: 0px 10px; }
+
+#users .table { margin: -10px 0px 10px 0px; }
+
+#users .table .char { margin: 10px 0px; background-color: rgb(83, 82, 80); padding: 5px 15px; color: white;
+font-size: 18px; font-weight: bold;}
+
+#users .table .person { padding: 5px 15px; background-color: #EEE; margin: 2px 0px; }
+#users .table .person:hover { background-color: #CCC; }
+#users .table .person .personal_id { color: #888; }
+#users .table .person .icons { float: right; font-size: 18px; }
+#users .table .person .icons .fa { margin-left: 25px; vertical-align: top; }
+#users .table .person .icons .fa-edit { color: #008; font-size: 20px; }
+#users .table .person .icons .fa-edit:hover { color: #00F; }
+
+#users .table .person .icons > span .fa { margin-right: 5px; vertical-align: middle; }
+#users .table .person .icons > span strong { color: #B3231B; }
+
+
+/* EVENTS */
+#events .title_1 .subtitle a:first-of-type .fa { margin-right: 10px; }
+#events .title_1 .subtitle a:last-of-type .fa { margin-left: 10px; }
+
+#events .add { font-weight: bold; margin-bottom: 20px; background-color: #DDD; padding: 10px 15px; }
+#events .add .title { font-size: 18px; margin-bottom: 10px; }
+#events .add .info { font-size: 12px; margin: 5px 0px; font-weight: bold; color: #222; }
+#events .add input { padding: 2px 5px; width: 25px; margin: 5px 0px; text-align: center; }
+#events .add input[name='description'] { width: 300px; text-align: left; }
+#events .add .button_submit { margin: 5px 0px; }
+
+
+#terms .title_1 .subtitle a:first-of-type .fa { margin-right: 10px; }
+#terms .title_1 .subtitle a:last-of-type .fa { margin-left: 10px; }
+#requests .title_1 .subtitle a:first-of-type .fa { margin-right: 10px; }
+#requests .title_1 .subtitle a:last-of-type .fa { margin-left: 10px; }
+
+.table_3 table { width: 100%; }
+.table_3 table tr { transition-duration: 0.5s; }
+.table_3 table tr:nth-child(even) { background-color: #FFF; }
+.table_3 table tr:nth-child(odd) { background-color: #DDD; }
+.table_3 table th { background-color: #323232; color: #FFF; padding: 10px 15px; text-align: left; }
+.table_3 table td { padding: 5px 15px; }
+.table_3 table tr td:nth-child(1) { font-weight: bold; text-align: center; }
+.table_3 table tr td[colspan='3'] { text-align: left; background-color: #DDD; }
+.table_3 table tr td:nth-child(1) div { white-space: nowrap; }
+.table_3 table tr td:nth-child(1) div strong { color: #B3231B; }
+.table_3 table tr td:nth-child(2) { width: 99%; }
+.table_3 table tr td:nth-child(2) input { width: 30px; text-align: center; }
+.table_3 table tr td:nth-child(3) { background-color: #B3231B; color: #FFF; }
+.table_3 table tr td:nth-child(3).disable { background-color: #AAA; }
+.table_3 table tr td:nth-child(3).enable { background-color: #23B31B; }
