--- a/Aplikácia/style/main.css
+++ b/Aplikácia/style/main.css
@@ -23,7 +23,7 @@ a:focus { background-color: none !important; }
 .buttons { text-align: right; }
 button, input[type=button], input[type=submit] { font-family: inherit; font-size: inherit; border: none; padding: 0; margin: 0; }
 .button_submit { display: inline-block; background-color: #B3231B; margin-bottom: 20px; color: white; font-weight: bold; padding: 5px 15px; font-size: 15px; border-radius: 5px; box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.3); }
-.button_submit#empty_add { display: inline-block; background-color: #666; }
+.button_submit#empty_add, .button_submit.disabled { display: inline-block; background-color: #666; }
 .button_submit.add_absence { margin-top: 20px; }
 .button_print { margin: 0; }
 .hidden { display: none; }
