Odkaz na stiahnutie vykazu dochadzky pre sekretarku

--- a/Aplikácia/style/main.css
+++ b/Aplikácia/style/main.css
@@ -155,6 +155,9 @@ footer .about { color: #FFBD43; float: right; cursor: pointer; }
 #overview_table > .title > span:hover { color: #B3231B; }
 #overview_table > .title > span:first-of-type { margin-left: -10px; }
 #overview_table > .title > span:last-of-type { margin-right: -10px; }
+#overview_table > .title:after { content: ''; display:block; height: 0; overflow: hidden; clear: right; }
+#overview_table > .title > .button_download { margin: -2px 0 -5px 25px; float: right; }
+
 #overview_table > .box { box-shadow: inset 0px 0px 0px 2px rgb(216, 216, 216); margin: 15px 0px; padding: 0px 10px; font-size: 14px; color: #555; }
 #overview_table > .box > .title { background-color: #535250; color: #FFF; margin: 0px -10px; padding: 10px 15px; text-transform: uppercase; font-size: 16px; font-weight: bold; }
 #overview_table > .box > .holiday { background-color: #B3231B; }
